<resources>
    <string name="app_name">MeAppL</string>
    <string name="action_settings">Settings</string>
    <string name="str_firstName">First name</string>
    <string name="str_lastName">Last name</string>
    <string name="str_email">Email</string>
    <string name="str_date">Date</string>
    <string name="str_time">Time</string>
    <string name="str_phoneno">Phone no.</string>
    <string name="undo">UNDO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
